--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,7 +13,7 @@
 }
 body{
   background: var(--blue);
-  background: linear-gradient(90deg, var(--mdBlue) 0%, var(--darkBlue) 43%, var(--lightBlue) 100%);
+  /**/background: linear-gradient(90deg, var(--mdBlue) 0% 43%, var(--lightBlue) 100%);
 }
 
 h1, h2, h3, h4, h5, p, span, strike{
